feat: delete user refined
