# backend/api/src/route_error.rs
@@ -11,8 +11,8 @@ pub struct InvalidResponse{
 }
 
 impl InvalidResponse {
-	fn new(status: Status, message: String) -> Self {
-		Self { status, message }
+	pub fn new(status: Status, message: &str) -> Self {
+		Self { status, message: message.to_string() }
 	}
 }
 
@@ -22,30 +22,26 @@ impl<'r> Responder<'r, 'static> for InvalidResponse {
 	}
 }
 
-fn msg(status: Status, msg: &str) -> InvalidResponse {
-	InvalidResponse::new(status, msg.to_string())
-}
-
 #[catch(401)]
 pub fn unauthorized() -> InvalidResponse {
-	msg(Status::Unauthorized, "Unauthorized")
+	InvalidResponse::new(Status::Unauthorized, "Unauthorized")
 }
 
 #[catch(404)]
 pub fn not_found() -> InvalidResponse {
-	msg(Status::NotFound, "Not Found")
+	InvalidResponse::new(Status::NotFound, "Not Found")
 }
 
 pub fn invalid_api(reason: &str) -> InvalidResponse {
-	msg(Status::BadRequest, reason)
+	InvalidResponse::new(Status::BadRequest, reason)
 }
 
 #[catch(500)]
 pub fn internal_server_error() -> InvalidResponse {
-	msg(Status::InternalServerError, "Internal Server Error")
+	InvalidResponse::new(Status::InternalServerError, "Internal Server Error")
 }
 
 #[catch(501)]
 pub fn not_implemented() -> InvalidResponse {
-	msg(Status::NotImplemented, "Not Implemented")
+	InvalidResponse::new(Status::NotImplemented, "Not Implemented")
 }
